--- a/papers/icwe14/references.bib
+++ b/papers/icwe14/references.bib
@@ -1,5 +1,73 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+@article{w3c2004document,
+  title={Document Object Model (DOM) Level 3 Core Specification},
+  author={W3C-World Wide Web Consortium and others},
+  journal={W3C recommendation},
+  year={2004}
+}
+
+@article{Raggett99_HTML,
+  title={HTML 4.01 Specification},
+  author={Raggett, Dave and Le Hors, Arnaud and Jacobs, Ian and others},
+  journal={W3C recommendation},
+  volume={24},
+  year={1999}
+}
+
+@TechReport{Doeraene13_ScalaJs,
+   abstract    = {Interoperability between statically typed and
+                 dynamically typed languages is increasingly important, as
+                 can be witnessed by the many statically typed languages
+                 targeting JavaScript. Interoperating with both the
+                 object-oriented and functional features of JavaScript is
+                 essential, if only to manipulate the DOM, yet existing
+                 languages have very poor support for this. We present
+                 Scala.js, a dialect of Scala compiling to JavaScript. Its
+                 interoperability system is based on a powerful and
+                 intuitive framework for type-directed interoperability
+                 with dynamically typed languages. The framework combines
+                 facade types for JavaScript values; user-defined,
+                 implicit, type-directed cross-language conversions; and a
+                 Dynamic type building on facade types and implicit
+                 conversions. It accommodates both the functional and
+                 object-oriented features of Scala and JavaScript, and
+                 provides very natural interoperability between the two
+                 languages. It is expressive enough to represent the DOM
+                 and jQuery APIs, among others, both in its statically
+                 typed and dynamically typed flavors.},
+   affiliation = {EPFL},
+   author      = {Doeraene, Sébastien},
+   details     = {http://infoscience.epfl.ch/record/190834},
+   documenturl = {http://infoscience.epfl.ch/record/190834/files/scalajs-paper.pdf},
+   keywords    = {interoperability; static types; dynamic types; Scala; JavaScript},
+   oai-id      = {oai:infoscience.epfl.ch:190834},
+   oai-set     = {driver},
+   pagecount   = {10},
+   submitter   = {232023; 232023},
+   title       = {Scala.{j}s: {T}ype-{D}irected {I}nteroperability with
+                 {D}ynamically {T}yped {L}anguages},
+   unit        = {LAMP},
+   year        = 2013
+}
+
+
+@incollection{Lerner13_TypedJQuery,
+  year={2013},
+  author = "Lerner, BenjaminS. and Elberty, Liam and Li, Jincheng and Krishnamurthi, Shriram",
+  booktitle = "{ECOOP 2013 – Object-Oriented Programming}",
+  doi = "10.1007/978-3-642-39038-8_4",
+  editor = "Castagna, Giuseppe",
+  isbn = "978-3-642-39037-1",
+  pages = "79–103",
+  publisher = "Springer Berlin Heidelberg",
+  series = "{Lecture Notes in Computer Science}",
+  title = "{Combining Form and Function: Static Types for JQuery Programs}",
+  url = "http://dx.doi.org/10.1007/978-3-642-39038-8_4",
+  volume = "7920"
+}
+
+
 @inproceedings{leijen1999domain,
   title={Domain specific embedded compilers},
   author={Leijen, Daan and Meijer, Erik},
